# otp-auth

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: hmac.rs  hotp.rs  lib.rs  secret.rs  totp.rs
src/alg/: mod.rs  sha1.rs  sha256.rs  sha512.rs
src/encoding/: base32.rs  hex.rs  mod.rs  url.rs
tests/: hotp_test.rs  totp_test.rs
